--- a/hello.html
+++ b/hello.html
@@ -3,7 +3,7 @@
         <title>Practice GITHUB </title>
     </head>
     <body>
-        HELLO, HELLO, Hello again
+        HELLO, HELLO
     </body>
 </html>
        
